--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-js-getting-started",
+  "name": "website",
   "version": "0.3.0",
   "description": "A sample Node.js app using Express 4",
   "engines": {
@@ -7,8 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "ejs": "^2.5.6",
@@ -20,8 +19,7 @@
     "tape": "^4.7.0"
   },
   "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "type": "git"
   },
   "keywords": [
     "node",
